# crewai-test

./: .gitignore  CLAUDE.html  CLAUDE.md  DEVPLAN.md  LICENSE  MEMORY_PERSISTENCE.md  README.md  SPRINT1.md  SPRINT2.md  package-lock.json  pyproject.toml
.aiassistant/rules/: context7.md  in-memoria.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.in-memoria/: config.json
crewai_test/: README.md  cross_agent_embeddings.index  cross_agent_embeddings.metadata.json  echo_agent_memory.json  pyproject.toml  report.md  test_embeddings.index  test_embeddings.metadata.json
crewai_test/src/crewai_test/: crew.py  echo_crew.py  echo_main.py  enhanced_memory_store.py  main.py  memory_echo_crew.py  memory_store.py  research_crew.py  research_main.py  simple_test.py  test_cross_agent_recall.py  test_enhanced_memory.py  test_memory_persistence.py
crewai_test/src/crewai_test/config/: agents_echo.yaml  agents_research.yaml  tasks_echo.yaml  tasks_research.yaml
crewai_test/tests/: test_crew.py  test_echo_crew.py
