[project]
name = "crewai_test"
version = "0.1.0"
description = "crewai-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
crewai_test = "crewai_test.main:run"
run_crew = "crewai_test.main:run"
train = "crewai_test.main:train"
replay = "crewai_test.main:replay"
test = "crewai_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
